src/objects/IT_Comments__c.object
<CustomObject>
    <description>ETS documents details of ticket</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IT Comments</relationshipLabel>
        <relationshipName>IT_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IT_Notes__c</fullName>
        <label>IT Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Increment__c</fullName>
        <label>Time Increment</label>
        <type>TextArea</type>
    </fields>
    <label>IT Comments</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>IT Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>